[tool.poetry]
name = "Glowing Engine Backend"
version = "0.1.0"
description = ""
authors = ["James Dearlove <jamesdearlove@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.81.0"
python-dotenv = "^0.20.0"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]
uvicorn = "^0.18.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
