[tool.poetry]
name = "Glowing Engine Backend"
version = "0.1.0"
description = ""
authors = ["James Dearlove <jamesdearlove@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.81.0"
httpx = "^0.23.0"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
